# ex_bashkit

./: .gitignore  BUGREPORT-empty-dirname-recursion-sigbus.md  CHANGELOG.md  HANDOFF.md  PORTING.md  README.md  RUST_NIF_AUDIT_STARTFILE.md  UPDATE_PROCEDURE.md  checksum-Elixir.ExBashkit.Native.exs  justfile  mix.exs
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-06-19-custom-builtins-design.md  2026-06-19-virtual-filesystem-design.md  2026-06-20-python-builtin-design.md  2026-06-20-snapshot-resume-design.md
examples/: basic.exs  builtins.exs  limits.exs  llm_tool.exs  mounts.exs  network.exs  python.exs  session.exs  snapshot.exs  vfs.exs  virtual_fs.exs
lib/: ex_bashkit.ex
lib/ex_bashkit/: native.ex  pool.ex  python.ex  result.ex  session.ex  virtual_fs.ex
lib/ex_bashkit/python/: session_fs.ex
native/ex_bashkit/: Cargo.toml
native/ex_bashkit/src/: lib.rs
test/: ex_bashkit_test.exs
test/ex_bashkit/: pool_test.exs  session_builtins_test.exs  session_fs_api_test.exs  session_hardening_test.exs  session_limits_test.exs  session_mount_test.exs  session_network_test.exs  session_python_test.exs  session_snapshot_test.exs  session_test.exs  session_vfs_dynamic_test.exs  session_vfs_malformed_listing_test.exs  session_vfs_test.exs
