[package]
name = "ex_bashkit"
version = "0.1.0"
edition = "2021"
# bashkit tracks a recent toolchain; bump this if cargo complains about the
# minimum supported Rust version of bashkit or its transitive deps.
rust-version = "1.82"

[lib]
name = "ex_bashkit"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
# Re-export bashkit's network feature as our own so the `#[cfg(feature =
# "http_client")]` gates in src/lib.rs are real (a `cfg(feature = ...)` checks
# *this* crate's features, not the dependency's). On by default → baked into the
# shipped NIF. Build with `--no-default-features` to drop reqwest/rustls.
default = ["http_client"]
http_client = ["bashkit/http_client"]

[dependencies]
rustler = "0.37"

# bashkit IS published to crates.io (unlike monty, which is git-only), so we pin
# an exact semver. Bump deliberately via UPDATE_PROCEDURE.md.
#
# Feature notes (see PORTING.md "Feature flags"):
#   - default = ["bash_tool"] — the Rust-side LLM tool wrapper. We build our own
#     tool contract on the Elixir side, so we start with default-features = false.
#   - "python" needs monty, which is a GIT dep upstream — NOT available from the
#     crates.io build of bashkit. Enabling it requires a git source. Left off for now.
#   - "sqlite" pulls turso (multi-MB) and needs tokio/rt-multi-thread.
#   - "typescript", "git", "ssh", "jq" are each opt-in.
#
# "realfs" (no extra deps — just compiles bashkit's real-host-FS module) powers
# host directory mounts (ExBashkit.Session :mounts). It is compiled into the
# default build; mounting stays default-deny at runtime (no mount = no host
# access). bashkit enforces all escape/canonicalization/sensitive-path checks.
#
# "http_client" (pulls reqwest + rustls/ring — a real HTTP/TLS dep tree, so a
# meaningfully bigger build than realfs) powers the curl/wget/http builtins
# behind ExBashkit.Session :allow_net. Network stays default-deny at runtime;
# enabling the feature only makes an allowlist *configurable*. bashkit installs
# the ring crypto provider itself and enforces all SSRF/allowlist checks. Baked
# into the shipped NIF (decided with the user) so network capability ships with
# every precompiled binary. http_client is enabled through *our* `default`
# feature above (which maps to `bashkit/http_client`), so it stays cfg-gateable.
bashkit = { version = "=0.11.0", default-features = false, features = ["realfs"] }
# For local iteration against a checkout, comment the line above and use:
# bashkit = { path = "../../../bashkit/crates/bashkit", default-features = false, features = ["realfs"] }

# bashkit's `exec` is async (tokio). We host a single shared runtime and
# block_on it from inside dirty NIFs. See src/lib.rs.
tokio = { version = "1", features = ["rt-multi-thread"] }
